# arceos_experiment

./: Cargo.toml  Makefile  README.md  RunningRecord.md  run_qemu_riscv.sh  run_qemu_with_xhci.sh  run_qemu_with_xhci_windows.ps1  rustc-ice-2025-02-02T07_39_57-197736.txt
apps/boards/phytium-car/: Cargo.toml
apps/boards/phytium-car/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: cmd.rs  main.rs
apps/usb/: Cargo.toml
apps/usb-hid/: Cargo.toml
apps/usb-hid/src/: main.rs
apps/usb/src/: main.rs
apps/uvc/src/: main.rs
crates/ax_event_bus/: Cargo.toml
crates/ax_event_bus/src/: lib.rs
crates/ax_event_bus/src/events/: mod.rs  mouse.rs
crates/axdtb/: Cargo.toml
crates/axdtb/src/: lib.rs
crates/axhid/: Cargo.toml  LICENSE  README.md
crates/axhid/examples/: example.rs
crates/axhid/src/: lib.rs  report_desc.rs  report_handler.rs  usage_tables.rs
crates/brcm_pcie/src/: bcm2711.rs
crates/driver_common/src/: lib.rs
crates/driver_i2c/src/: example.rs  lib.rs
crates/driver_i2c/src/driver_iic/: i2c.rs  i2c_hw.rs  i2c_intr.rs  i2c_master.rs  i2c_sinit.rs  io.rs  mod.rs
crates/driver_i2c/src/driver_mio/: mio.rs  mio_g.rs  mio_hw.rs  mio_sinit.rs  mod.rs
crates/driver_pca9685/src/: lib.rs
crates/driver_pci/: Cargo.toml
crates/driver_pci/src/: bcm2711.rs  lib.rs  root_complex.rs  types.rs
crates/driver_pci/src/phytium/: mod.rs
crates/driver_usb/: Cargo.toml
crates/driver_usb/guide/: quickstart.md
crates/driver_usb/question/: question_5_27.md  question_5_29.md
crates/driver_usb/src/: dma.rs  lib.rs  pci_interface.rs  usb_driver.rs
crates/driver_usb/src/abstractions/: dma.rs  mod.rs
crates/driver_usb/src/abstractions/event/: mod.rs
crates/driver_usb/src/drivers/: mod.rs
crates/driver_usb/src/drivers/driver_usb_storage_scsi/: mod.rs
crates/driver_usb/src/glue/: mod.rs  ucb.rs
crates/driver_usb/src/host/: mod.rs
crates/driver_usb/src/host/data_structures/host_controllers/: mod.rs
crates/driver_usb/src/host/data_structures/host_controllers/xhci/: context.rs  event_ring.rs  mod.rs  ring.rs
crates/driver_usb/src/host/structures/: context.rs  descriptor.rs  event_ring.rs  mod.rs  root_port.rs  scratchpad.rs  transfer_ring.rs  xhci_command_manager.rs  xhci_event_manager.rs  xhci_roothub.rs  xhci_slot_manager.rs  xhci_usb_device.rs
crates/driver_usb/src/host/structures/usb/: mod.rs
crates/driver_usb/src/host/structures/usb/descriptors/: desc_endpoint.rs  mod.rs
crates/driver_usb/src/host/usb/descriptors/: mod.rs
crates/driver_usb/src/host/usb/drivers/driver_usb_hid/: mod.rs
crates/driver_usb/src/host/xhci/: mod.rs  xhci_device.rs
crates/driver_usb/src/host/xhci/vl805/: mod.rs
crates/driver_usb/src/usb/: mod.rs  urb.rs
crates/driver_usb/src/usb/descriptors/: desc_device.rs  desc_endpoint.rs  desc_hid.rs  mod.rs  parser.rs
crates/driver_usb/src/usb/descriptors/desc_uvc/: mod.rs  uvc_endpoints.rs  uvc_interfaces.rs
crates/driver_usb/src/usb/drivers/: driverapi.rs  mod.rs
crates/driver_usb/src/usb/operation/: mod.rs
crates/driver_usb/src/usb/transfer/: mod.rs
crates/driver_usb/src/usb/trasnfer/: control.rs  isoch.rs  mod.rs
crates/driver_usb/src/usb/universal_drivers/: mod.rs
crates/driver_usb/src/usb/universal_drivers/block_drivers/: bot_protocol.rs  mod.rs
crates/driver_usb/src/usb/universal_drivers/ch341_drivers/: ch341.rs  mod.rs
crates/driver_usb/src/usb/universal_drivers/hid_drivers/: hid_keyboard.rs  hid_mouse.rs  mod.rs  temp_mouse_report_parser.rs
crates/driver_usb/src/usb/universal_drivers/uvc_drivers/: generic_uvc.rs  uvc_device_model.rs  uvc_spec_transfer.rs
crates/flatten_objects/src/: lib.rs
crates/hidreport/: Cargo.toml  build.rs
crates/hidreport/src/: hid.rs  lib.rs  types.rs
crates/page_box/src/: lib.rs
crates/xhci/: README.md
crates/xhci/src/context/: mod.rs
doc/: apps_usb-hid.md  hjy_midterm.pptx
doc/USB_TO_SERIAL/: CH340描述符.md  ChangeLog.md  USB转串口开发.md  driver_usb驱动代码解读.md  使用串口传输usb-hid到飞腾派.md  监听USB总线上的URB信息.md
doc/UVC_developing/: Linux系统UVC相关驱动分析.md
doc/development_manual/: how_to_write_a_usb_drvice_driver.md
modules/axalloc/src/: lib.rs
modules/axconfig/: defconfig.toml
modules/axdriver/: Cargo.toml
modules/axdriver/src/: drivers.rs  lib.rs  macros.rs
modules/axdriver/src/bus/: pci.rs
modules/axdriver/src/structs/: mod.rs  static.rs
modules/axhal/src/: cpu.rs  irq.rs  mem.rs
modules/axhal/src/arch/aarch64/: context.rs
modules/axhal/src/arch/x86_64/: context.rs
modules/axhal/src/platform/aarch64_common/: boot.rs  mod.rs
modules/axhal/src/platform/aarch64_phytium_pi/: mem.rs  mod.rs
modules/axhal/src/platform/aarch64_qemu_virt/: mem.rs  mod.rs
modules/axhal/src/platform/aarch64_raspi/: mem.rs
modules/axhal/src/platform/dummy/: mod.rs
modules/axhal/src/platform/riscv64_qemu_virt/: boot.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: lib.rs
modules/axtask/src/: run_queue.rs
scripts/make/: qemu.mk
temp/: cmp1.txt  cmp2.txt
tools/phytium-pi/: yet_another_uboot_transfer.py
ulib/axlibc/src/: setjmp.rs
