[package]
name = "arceos-cli"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# use-ramfs = ["axstd/myfs", "dep:axfs_vfs", "dep:axfs_ramfs", "dep:crate_interface"]
default = []

[dependencies]
# axfs_vfs = { path = "../../../crates/axfs_vfs", optional = true }
# axfs_ramfs = { path = "../../../crates/axfs_ramfs", optional = true }
# crate_interface = { path = "../../../crates/crate_interface", optional = true }
axstd = { path = "../../ulib/axstd", features = ["alloc"], optional = true }
axfeat = { path = "../../api/axfeat", features = ["multitask", "sched_rr"] }

axdtb = { path = "../../crates/axdtb" }
axhal = { path = "../../modules/axhal" }

# axstd = { path = "../../ulib/axstd", optional = true }

axdriver = { path = "../../modules/axdriver", features = [
  "bus-pci",
  "axusb-pci-host",
  "usb",
  # "pci-xhci"
] }
lazy_init = { version = "0.1.0", path = "../../crates/lazy_init" }
# axstd = { path = "../../ulib/axstd", optional = true }
