[package]
name = "hidreport"
version = "0.4.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hidutils"
repository = "https://github.com/hidutils/hut"
description = "HID Report Descriptor and HID Report parser, a fork from original repo"
exclude = [
    "/tests/data/*.hid.bin",
    "/tests/data/*.rdesc",
]

[dependencies]
thiserror = {git = "https://github.com/quartiq/thiserror.git",branch = "no-std", default-features = false}
axalloc = {path="../../modules/axalloc"}